rest-server-service/yaml/02_service-server.yml
apiVersion: v1
kind: Service
metadata:
  name: rest-service-server
  labels:
    app: rest-service-server
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: rest-service-server
