rest-server-service/yaml/04_mesh-virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rest-server-service-vs1
spec:
  hosts:
    - rest-server-service.rest-service-test.svc.cluster.local
  gateways:
    - mesh
  http:
  - name: privileged
    match:
    - sourceLabels:
        app: rest-client-privileged
    route:
    - destination:
        host: rest-server-service.rest-service-test.svc.cluster.local
        subset: privileged

  - name: default
    route:
    - destination:
        host: rest-server-service.rest-service-test.svc.cluster.local
        subset: regular
