rest-server-service/yaml/06_ingress-destinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: rest-service-server-destination
spec:
  host: rest-service-server.rest-service-test.svc.cluster.local
#  trafficPolicy:
#    connectionPool:
#      tcp:
#        maxConnections: 1
#      http:
#        maxRetries: 3
#        http1MaxPendingRequests: 1
#        maxRequestsPerConnection: 1
  subsets:
  - name: privileged
    labels:
      version: v1
    trafficPolicy:
      connectionPool:
        tcp:
          maxConnections: 200
        http:
          http1MaxPendingRequests: 100
          maxRequestsPerConnection: 200
  - name: regular
    labels:
      version: v1
    trafficPolicy:
      connectionPool:
        tcp:
          maxConnections: 3
        http:
          maxRetries: 1
          http1MaxPendingRequests: 3
          maxRequestsPerConnection: 1
