rest-server-service/yaml/06_mesh-destinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: rest-service-server-destination
spec:
  host: rest-service-server.rest-service-test.svc.cluster.local
#  trafficPolicy:
#    connectionPool:
#      tcp:
#        maxConnections: 3
#      http:
#        http1MaxPendingRequests: 3
#        maxRequestsPerConnection: 1
  subsets:
  - name: privileged
    labels:
      version: v1
    trafficPolicy:
      connectionPool:
        tcp:
          maxConnections: 300
        http:
          http1MaxPendingRequests: 300
          maxRequestsPerConnection: 100
  - name: regular
    labels:
      version: v1
    trafficPolicy:
      connectionPool:
        tcp:
          maxConnections: 3
        http:
          http1MaxPendingRequests: 3
          maxRequestsPerConnection: 1
